[package]
name = "rt-render"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
winit = "0.23.0"
env_logger = "0.8.1"
log = "0.4.11"
wgpu = "0.6.0"
futures = "0.3.7"
