[package]
name = "renderer"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
image = "0.23.11"
winit = "0.23.0"
env_logger = "0.8.1"
log = "0.4.11"
wgpu = "0.6.0"
futures = "0.3.7"
glam = "0.10.0"
bincode = "1.3.1"
egui = "0.2.0"
egui_wgpu_backend = "0.1.1"
egui_winit_platform = "0.1.0"

[build-dependencies]
spirv-builder = { path = "../rust-gpu/spirv-builder", default-features = false }


[profile.release]
lto = true