[package]
name = "triangle"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
glam = "0.9.5"
spirv-std = { path = "../../rust-gpu/crates/spirv-std" }

[patch.crates-io]
# https://github.com/bitshifter/glam-rs/pull/85
glam = { git = "https://github.com/EmbarkStudios/glam-rs", rev = "d55ff75e91aab01c4fd9808e3ca9c079dfa7315c" }
